<resources>
    <string name="app_name">CheckReaction</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_finish">FinishActivity</string>
    <string name="TryAgain">Tap to try again</string>
    <string name="Tutor">Tap when color changes, as fast as you can</string>
    <string name="logo">Check your Reaction!</string>
    <string name="Too_fast">You typed before it changed colour</string>
    <string name="simple_reaction_is">"Your reaction is "</string>
    <string name="complex_reaction_is">"Your average reaction is "</string>
    <string name="ms">" ms"</string>
    <string name="ErrorInTestTypeSwitch">There is an error in currentTestType switch. Please contact developer.</string>
    <string name="simple_test_button">Simple test</string>
    <string name="complex_test_button">Complex test</string>
    <string name="testing_command_tap">TAP!</string>
    <string name="testing_string_ready">Ready!</string>
    <string name="Iteration">"Iteration "</string>
    <string name="from">" from "</string>
    <string name="ac_finish_your_median_result">"\n median reaction is "</string>
    <string name="username_hint">Name for leader board</string>
    <string name="score_number" translatable="false">№</string>
    <string name="score_username">username</string>
    <string name="score_median">median</string>
    <string name="score_average">average</string>
    <string name="open_leader_board">Open leader board</string>
    <string name="error_cannot_find_result">Cannot find test result. Please, contact developer.</string>
    <string name="loading_title">Loading</string>
    <string name="loading_message">Loading scores data...</string>
    <string name="science_splash_title">Konark’s Science Project \nMeasuring Reaction Time</string>
    <string name="science_splash_main_text">This experiment will test your reflexes (reaction time) in a controlled manner. The first series of tests will be performed when you are relaxed and not distracted. The tests will then be repeated when you are distracted, by having you speak on the phone while performing the test and, after you have spent a few minutes texting. The goal of this experiment is to see if your reflexes are impacted by being distracted or by spending time on texting</string>
    <string name="science_splash_posttext">Tap on the asked color area as soon as you see it, as quickly as you can. Each screen will only last 1 second and you will have 10 screens to play on.</string>
    <string name="science_splash_next_button">Begin the test</string>
    <string name="science_test">Science test</string>
    <string name="colour_white">white</string>
    <string name="colour_yellow">yellow</string>
    <string name="colour_red">red</string>
    <string name="colour_blue">blue</string>
    <string name="colour_black">black</string>
    <string name="science_test_header1">"Tap the "</string>
    <string name="science_test_header2">" tile"</string>
    <string name="accuracy">"ACCURACY: "</string>
    <string name="of">" of "</string>
    <string name="tapped_ok">" tapped correctly."</string>
    <string name="speed">"SPEED: "</string>
    <string name="milliseconds_descroption">" milliseconds average time it took you to tap on each tile correctly"</string>
    <string name="chosenTextWillBe">"Chosen text colour will be "</string>
    <string name="show_leaderboard">Show leaderboard</string>
    <string name="hits">hits</string>
    <string name="unknown_test_type">Unknown test type</string>
</resources>
