<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1.0">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/item_score_number"
        android:layout_weight="0.1"
        tools:text="@string/score_number"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/item_score_username"
        android:layout_weight="0.4"
        tools:text="@string/score_username"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/item_score_median"
        android:layout_weight="0.25"
        tools:text="@string/score_median"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/item_score_average"
        android:layout_weight="0.25"
        tools:text="@string/score_average"/>
</LinearLayout>