<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_science_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.two_two.checkreaction.ui.gamescore.science.ScienceScoreActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:background="@color/header_background">

        <!--header-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/item_score_number"
            android:layout_weight="0.1"
            android:text="@string/score_number"
            android:textColor="@color/header_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/item_score_username"
            android:layout_weight="0.4"
            android:text="@string/score_username"
            android:textColor="@color/header_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/item_hits_median"
            android:layout_weight="0.25"
            android:text="@string/hits"
            android:textColor="@color/header_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/item_score_average"
            android:layout_weight="0.25"
            android:text="@string/score_average"
            android:textColor="@color/header_text"/>
    </LinearLayout>
    <!--end of header-->

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ac_scores_list"/>
</LinearLayout>
